--- a/design.css
+++ b/design.css
@@ -177,6 +177,9 @@ pre code {
     code {
         margin-right: 5%;
     }
+    p {
+        margin-right: 4%;
+    }
 }
 p span {
     background-color: #eee;
