--- a/design.css
+++ b/design.css
@@ -155,7 +155,7 @@ body {
 p {    text-align:justify;
     color: rgb(20, 20, 20);
     margin-left: 150px;
-    margin-right: 150px;
+    margin-right: 40%;
 }
 /*Code écrit*/
 code {
